gccida/g0/ftruncify
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ftruncify/src/optabs.c:4815:23: error: use of undeclared identifier 'machine_mode'
temp = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ftruncify/src/optabs.c:4816:23: error: use of undeclared identifier 'machine_mode'
return expand_unop( ( machine_mode)*( ( unsigned __int8 *)x + 2), optab_table[17], x, temp, 0); 
                      ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/ftruncify/src/obj/optabs.o] Error 1
